--- a/requirements.txt
+++ b/requirements.txt
@@ -370,7 +370,7 @@ pytz==2022.7.1
 PyYAML==6.0
 rapidfuzz==3.4.0
 regex==2023.8.8
-requests==2.28.2
+requests>=2.31
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rich==13.6.0
